# x64dbg-agent-harness

./: MANIFEST.in  README.md  X64DBG.md  pyproject.toml
.omc/: project-memory.json
.omc/state/: agent-replay-2bfdf282-0a7c-4cec-a0aa-48ffdd7fedd6.jsonl  agent-replay-3a8c85f5-55a7-429c-86b4-e8351487bf27.jsonl  agent-replay-d7379306-f741-4488-8dbc-08780e0078c9.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-25T03-58-07-763Z.json  checkpoint-2026-03-25T04-00-27-036Z.json  checkpoint-2026-03-25T05-03-05-501Z.json  checkpoint-2026-03-25T11-40-36-926Z.json  checkpoint-2026-03-25T12-26-41-698Z.json  checkpoint-2026-03-25T12-51-25-665Z.json  checkpoint-2026-03-25T13-20-33-612Z.json  checkpoint-2026-03-25T17-14-31-033Z.json
cli_anything/x64dbg/: README.md  __main__.py  x64dbg_cli.py
cli_anything/x64dbg/core/: export.py  project.py  session.py
cli_anything/x64dbg/skills/: SKILL.md
cli_anything/x64dbg/tests/: TEST.md  test_core.py  test_full_e2e.py
cli_anything/x64dbg/utils/: x64dbg_backend.py
cli_anything_x64dbg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
